# msgbusviz

./: .eslintrc.cjs  .gitignore  .prettierignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json
docs/superpowers/plans/: 2026-04-29-msgbusviz-implementation.md  2026-04-29-viewer-edit-mode.md  2026-04-30-edit-mode-node-color.md
docs/superpowers/specs/: 2026-04-29-msgbusviz-design.md  2026-04-29-viewer-edit-mode-design.md  2026-04-30-edit-mode-node-color-design.md
examples/: client-server.yaml  demo-traffic.mjs  inspect-stages.mjs  inspect.mjs  microservices.yaml  ops-agent.yaml  pubsub.yaml  redis-bridge.py  scale-speed.mjs  sd-agent.yaml
msgbusviz/: __init__.py  client.py
tests/e2e/: labels.spec.ts  package.json  playwright.config.ts  scene.spec.ts
tests/e2e/fixtures/: serverFixture.ts
